# sale-reporting-1

./: .copier-answers.yml  .pre-commit-config.yaml  .pylintrc  .pylintrc-mandatory  README.md
.github/workflows/: test.yml
product_sold_by_delivery_week/: README.rst  __manifest__.py
sale_comment_template/: README.rst  __manifest__.py
sale_comment_template/i18n/: gl.po  (+2 more)
sale_layout_category_hide_detail/: README.rst
sale_order_line_position/: README.rst  __manifest__.py
sale_order_product_recommendation_product_sold_by_delivery_week/: README.rst
sale_order_report_hide_tax/: README.rst  __manifest__.py
sale_order_report_product_image/: README.rst  __manifest__.py
sale_order_weight/: README.rst  __manifest__.py
sale_packaging_report/: README.rst
sale_quotation_builder/: README.rst  __init__.py  __manifest__.py
sale_report_delivered/: README.rst  __manifest__.py
sale_report_delivered_attribute_values/: README.rst  __manifest__.py
sale_report_delivered_brand/: README.rst  __manifest__.py
sale_report_delivered_deposit/: README.rst  __manifest__.py
sale_report_delivered_elaboration/: README.rst  __manifest__.py
sale_report_delivered_partner_priority/: README.rst
sale_report_delivered_price_compliance/: README.rst  __manifest__.py
sale_report_delivered_semaphore/: README.rst  __manifest__.py
sale_report_delivered_subtotal/: README.rst
sale_report_delivered_volume/: README.rst
sale_report_salesman/: README.rst  __manifest__.py
sale_report_salesperson_from_partner/: README.rst
setup/_metapackage/: VERSION.txt  pyproject.toml  setup.py
(+155 files in other folders)
