[project]
name = "odoo-addons-oca-sale-reporting"
version = "18.0.20251113.0"
dependencies = [
    "odoo-addon-product_sold_by_delivery_week==18.0.*",
    "odoo-addon-sale_layout_category_hide_detail==18.0.*",
    "odoo-addon-sale_order_line_position==18.0.*",
    "odoo-addon-sale_order_product_recommendation_product_sold_by_delivery_week==18.0.*",
    "odoo-addon-sale_order_report_product_image==18.0.*",
    "odoo-addon-sale_packaging_report==18.0.*",
    "odoo-addon-sale_report_delivered==18.0.*",
    "odoo-addon-sale_report_delivered_brand==18.0.*",
    "odoo-addon-sale_report_delivered_partner_priority==18.0.*",
    "odoo-addon-sale_report_delivered_subtotal==18.0.*",
    "odoo-addon-sale_report_delivered_volume==18.0.*",
    "odoo-addon-sale_report_salesperson_from_partner==18.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 18.0",
]
