[project]
name = "odoo-addons-oca-sale-reporting"
version = "19.0.20260611.0"
dependencies = [
    "odoo-addon-sale_order_line_position==19.0.*",
    "odoo-addon-sale_order_report_product_image==19.0.*",
]
classifiers=[
    "Programming Language :: Python",
    "Framework :: Odoo",
    "Framework :: Odoo :: 19.0",
]
